--- a/Switch.API/Switch.API.csproj
+++ b/Switch.API/Switch.API.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Switch.Infra.Data\Switch.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
