--- a/Switch.API/Switch.API.csproj
+++ b/Switch.API/Switch.API.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <Content Update="config.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
